--- a/.github/workflows/poller.yml
+++ b/.github/workflows/poller.yml
@@ -1,33 +1,12 @@
 name: Run poller daily
 
 on:
-  schedule:
-    - cron: "5 16 * * *"
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
-    env:
-      POLLER_URL: ${{ secrets.POLLER_URL }}
     steps:
-      - name: Sanity check secret (no leak)
+      - name: Call poller endpoint (HARDCODED TEST)
         run: |
-          python - <<'PY'
-          import os
-          url = os.environ.get("POLLER_URL","")
-          print("POLLER_URL length:", len(url))
-          print("Starts with https:// :", url.startswith("https://"))
-          print("Contains spaces:", " " in url)
-          print("Contains newline:", "\\n" in url)
-          PY
-
-      - name: Call poller endpoint (retry for cold start)
-        run: |
-          for i in 1 2 3 4 5; do
-            echo "Attempt $i..."
-            curl -v -X POST "$POLLER_URL" && exit 0
-            echo "Retrying in 20s..."
-            sleep 20
-          done
-          exit 1
+          curl -v -X POST "https://fishstock-alerts.onrender.com/run-poller?key=1g5df61g5df1g6d51h5g1j15yyuk1"
